Fix dupplicated style rule + dupplicated overflow on main

--- a/interactive-table/src/app/App.css
+++ b/interactive-table/src/app/App.css
@@ -43,8 +43,11 @@
 }
 
 .main {
-  max-height: 100vh;
-  min-height: 95vh;
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
+
+  overflow: hidden;
 }
 
 .button {
