--- a/interactive-table/src/app/views/game/game.css
+++ b/interactive-table/src/app/views/game/game.css
@@ -18,9 +18,3 @@
     max-height: 10%;
     width: 10%;
 }
-
-.main {
-    width: 100%;
-    height: 100%;
-    background-size: 100% 100%;
-}
